# husky_lqr

./: CMakeLists.txt  package.xml
include/husky_lqr/: Lqr.h
launch/: gazebo_tar_rosbag.launch
src/: Lqr.cpp  controller.cpp  trajectory.py
